--- a/templates/admin_products.html
+++ b/templates/admin_products.html
@@ -28,9 +28,12 @@
         <p>No image uploaded</p>
       {% endif %}
 
-      <form action="{{ url_for('delete_product', id=product.id) }}" method="POST" onsubmit="return confirm('Are you sure you want to delete this product?');">
-        <button type="submit" class="btn btn-danger btn-sm mt-2">Delete</button>
-      </form>
+<form action="{{ url_for('delete_product', id=product.id) }}"
+      method="POST"
+      onsubmit="return confirm('Are you sure you want to delete this product?');">
+  <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">  <!-- add this -->
+  <button type="submit" class="btn btn-danger btn-sm mt-2">Delete</button>
+</form>
     </div>
   {% endfor %}
 </ul>
