--- a/templates/profile_security_sidebar.html
+++ b/templates/profile_security_sidebar.html
@@ -14,7 +14,7 @@
     Security
   </a>
 
-  {% if current_user.role_id == 3 %}
+{% if current_user.role_id in [3,4] %}
     <a href="{{ url_for('admin_dashboard') }}"
        class="list-group-item list-group-item-action {% if request.endpoint == 'admin_dashboard' %}active{% endif %}">
       Admin
